--- a/CarHistoryApp.xcodeproj/xcshareddata/xcschemes/CarHistoryApp.xcscheme
+++ b/CarHistoryApp.xcodeproj/xcshareddata/xcschemes/CarHistoryApp.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "D44142A82CF2347B005635B6"
+               BuildableName = "CarDataTests.xctest"
+               BlueprintName = "CarDataTests"
+               ReferencedContainer = "container:CarHistoryApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
